--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lama-dev-portfolio",
+  "name": "3d-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "motion": "^12.23.26",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
+    "react-type-animation": "^3.2.0",
+    "sass": "^1.97.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
